@@ -90,9 +90,13 @@ $svn = 'c:/Program Files/CollabNet Subversion/svn.exe';
 #$ssh='c:/Program Files/OpenSSH/bin/ssh.exe';
 $ssh = '/usr/local/bin/ssh';
 
-# Location of the p4 (Perforce client) binary.  This does not need to be set
-# if you are bot using any Perforce repositories.
+# Location of the p4 (Perforce client) binary.  This is only required if
+# you are using a Perforce repository.
 $p4 = '/usr/local/bin/p4';
+
+# Location of the cleartool binary.  This is only required if you are using
+# a ClearCase repository.
+$cleartool = '/usr/local/bin/cleartool';
 
 # Location of the vss binary.  This can be ignored for deployments which don't
 # use VSS (Visual Source Safe).
@@ -517,7 +521,6 @@ $comment_state_metrics =
 #
 # Case where no comment thread metrics are to be used.
 #$comment_state_metrics = [];
-
 
 # Allows you to override the default title of "Codestriker %version%".
 # $title = "Codestriker $Codestriker::VERSION";
