@@ -24,6 +24,9 @@ Version 1.9.10
 
 * Support for git repositories from Jeffrey Middleton
   <jefromi@gmail.com>.
+
+* Fixed "Parallel View" links for ClearCase repositories, from
+  Thomas Yan <yantao@neusoft.com>.
 	
 Version 1.9.9
 
